# voxeltest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: camera.h  d3d_app.h  obj_loader.h  voxel_mesher.h  voxel_world.h
shaders/: blit.hlsl  model.hlsl  overlay.hlsl  sky.hlsl  taa.hlsl  voxel.hlsl
src/: camera.cpp  d3d_app.cpp  main.cpp  obj_loader.cpp  voxel_mesher.cpp  voxel_world.cpp
